# dynamic_moe

./: .gitignore  README.md  entropy_difficulty_classifier.pkl  finetune_slimpajama.sh  gsm8k_prompt_entropy_scores (1).csv  skeleton.py  step1entropyscorenotebook.ipynb
logs/: pyproject.toml
logs/10-epoch-run/: events.out.tfevents.1744942847.3b3f32bad63d.304.0
logs/convergence-test-topp/: events.out.tfevents.1745096331.d9aae2de3c95.2079.0
logs/top-k/: events.out.tfevents.1744956662.a5fd3e90d548.1555.0
logs/top-p/: events.out.tfevents.1745100458.0478e06d79f7.4252.0
model/: DataLoader.py  FineTuner.py  ModelConverter.py  __init__.py  expert.py  finetune.py  llama_moe.py  main.py  moe.py  pyproject.toml  run_experiment.py  utils.py
model/architecture/: Conv1D.py  ExpertLayer.py  GPT2MoEBlock.py  MixtureofExpert.py
models/gates/: entropy.py  expert_gate.py  load_balance.py  rl.py  top_any.py  top_k.py  top_p.py
prompt_complexity/: step1classifiernotebook.ipynb
