[tool.poetry]
name = "tensorboard-logs"
version = "0.1.0"
description = "TensorBoard logging configuration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tensorboard = "^2.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 