[tool.poetry]
name = "dynamic-moe"
version = "0.1.0"
description = ""
authors = ["Steven Su <hanqisu@sas.upenn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.0.0"
transformers = ">=4.30.0"
numpy = ">=2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
