[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets (>=3.5.0,<4.0.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "zstandard (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
