[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
datasets = ">=3.5.0,<4.0.0"
transformers = ">=4.51.1,<5.0.0"
torch = ">=2.6.0,<3.0.0"
tensorboard = ">=2.19.0,<3.0.0"
zstandard = ">=0.23.0,<0.24.0"
accelerate = ">=0.26.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
